intro recovery AND footer layout modify

--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -3,12 +3,17 @@ html(lang="ko")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
-    meta(name="title", content="Koinvestor Blog")
-    meta(name="description", content="Koinvestor Blog")
+    meta(name="title", content="Koinvestor Blog - Official information to the Asian investors")
+    meta(name="description", content="Koinvestor promptly and accurately delivers the official information of the global blockchain projects, through mutual cooperation, to the Asian investors.")
     meta(name="keywords", content="koinvestor, blog, blockchain, korea investor, korea, investor")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     meta(name="format-detection", content="telephone=no, address=no, email=no")
+    meta(name="theme-color" content="#ffffff")
     meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style" content="white")
+    meta(name="mobile-web-app-capable" content="yes")
+
+
 
     title KOINVESTOR Blog
     link(rel="stylesheet", href=`/css/main.css`)
@@ -20,7 +25,7 @@ html(lang="ko")
 
   //- 옮겨야 할 마크업
   body
-    //- block intro
+    block intro
 
     include layout/header
 
