--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,8 @@
 
 @import 'layout/main',
 'layout/header',
-'layout/footer';
+'layout/footer',
+'layout/intro';
 
 @import 'components/grid',
 'components/loading',
@@ -24,31 +25,3 @@
 
 
 @import 'admin/admin';
-
-// intro
-/*
-.intro {
-  position: absolute;
-  z-index: 3;
-  width: 100%;
-  height: 100vh;
-  text-align: center;
-  background-color: #fff;
-  transition: .7s;
-
-  &.off {
-    opacity: 0;
-    z-index: -1;
-    display: none;
-  }
-
-  img {
-    @include centered();
-    width: 13rem;
-
-    @media (min-width: $mobile) {
-      width: 20rem;
-    }
-  }
-}
-*/
