--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,17 +1,17 @@
 extends ./_layout.pug
 
-//- block intro
-  //- .intro
-  //-   img(src="/assets/svg/koinvestor_logo.svg")
+block intro
+  .intro
+    img(src="/assets/svg/koinvestor_logo.svg")
 
 block main
   section.root
-    //- article.about
+    article.about
       .box.mobile
         .korean
-          | 코인베스터는 전세계 블록체인 <br />
+          | 코인베스터 블로그는 전 세계 블록체인 <br />
           | 프로젝트팀과 협업을 통하여 <br/>
-          | 한국 투자자들에게 유용한 정보를  <br />
+          | 아시아 투자자들에게 유용한 정보를  <br />
           | 신속하고 정확하게 제공합니다.
         .english
           | Koinvestor <br />
@@ -19,16 +19,17 @@ block main
           | the official information <br />
           | of the global blockchain projects, <br />
           | through mutual cooperation, <br />
-          | to the Korean investors.
+          | to the Asian investors.
       .box.rest
         .korean
-          | 코인베스터는 전세계 블록체인 프로젝트팀과 협업을 통하여 <br/>
-          | 한국 투자자들에게 유용한 정보를 신속하고 정확하게 제공합니다.
+          | 코인베스터 블로그는 전 세계 블록체인 프로젝트팀과 협업을 통하여 <br/>
+          | 아시아 투자자들에게 유용한 정보를 신속하고 정확하게 제공합니다.
         .english
           | Koinvestor promptly and accurately delivers the official information <br />
           | of the global blockchain projects, through mutual cooperation, <br />
-          | to the Korean investors.
-    article.banner
+          | to the Asian investors.
+
+    //- article.banner
       .bg--wrap
         img.square(src="/assets/image/intro/intro_bg_square.png")
         img.rectangle(src="/assets/image/intro/intro_bg_rectangle.png")
