--- a/src/sass/pages/_root.scss
+++ b/src/sass/pages/_root.scss
@@ -3,7 +3,6 @@
 .detail {
 
     // About
-    /*
     .about {
         position: relative;
         min-height: 100vh;
@@ -51,114 +50,115 @@
             }
         }
     }
+
+    /*
+    // article.banner {
+    //     position: relative;
+    //     width: 100%;
+    //     margin: 0 auto;
+
+    //     @media (min-width: 1366px) {
+    //         & {
+    //             width: 972px;
+    //         }
+    //     }
+
+    //     .bg--wrap {
+    //         img {
+    //             width: 100%;
+    //         }
+
+    //         .square {
+    //             height: 180px;
+    //             object-fit: cover;
+    //         }
+
+    //         .rectangle {
+    //             display: none;
+    //         }
+
+    //         @media (min-width: $tablet) {
+    //             .square {
+    //                 display: none;
+    //             }
+
+    //             .rectangle {
+    //                 display: block;
+    //             }
+    //         }
+    //     }
+
+    //     .comment--wrap {
+    //         color: rgba(255, 255, 255, .74);
+
+    //         .mobile,
+    //         .rest {
+    //             line-height: 1.3;
+
+    //             .korean {
+    //                 margin-bottom: 1rem;
+    //             }
+    //         }
+
+    //         .mobile {
+    //             width: 100%;
+    //             @include centeredY;
+    //             text-align: center;
+
+    //             .korean,
+    //             .english {
+    //                 width: 100%;
+    //                 position: absolute;
+    //                 top: 50%;
+    //                 left: 50%;
+    //                 transform: translate(-50%, -50%);
+    //             }
+
+    //             .korean {
+    //                 animation: swap 8s infinite linear alternate-reverse;
+    //             }
+
+    //             .english {
+    //                 animation: swap 8s infinite linear alternate;
+    //             }
+
+    //             @keyframes swap {
+    //                 0% {
+    //                     opacity: 1;
+    //                 }
+
+    //                 50% {
+    //                     opacity: 0;
+    //                 }
+
+    //                 100% {
+    //                     opacity: 0;
+    //                 }
+    //             }
+    //         }
+
+    //         .rest {
+    //             display: none;
+    //             position: absolute;
+    //             top: 2rem;
+    //             left: 2rem;
+    //         }
+
+    //         @media (min-width: $tablet) {
+    //             & {
+    //                 .mobile {
+    //                     display: none;
+    //                 }
+
+    //                 .rest {
+    //                     display: block;
+    //                 }
+    //             }
+    //         }
+    //     }
+
+    // }
     */
-    article.banner {
-        position: relative;
-        width: 100%;
-        margin: 0 auto;
-
-        @media (min-width: 1366px) {
-            & {
-                width: 972px;
-            }
-        }
-
-        .bg--wrap {
-            img {
-                width: 100%;
-            }
-
-            .square {
-                height: 180px;
-                object-fit: cover;
-            }
-
-            .rectangle {
-                display: none;
-            }
-
-            @media (min-width: $tablet) {
-                .square {
-                    display: none;
-                }
-
-                .rectangle {
-                    display: block;
-                }
-            }
-        }
-
-        .comment--wrap {
-            color: rgba(255, 255, 255, .74);
-
-            .mobile,
-            .rest {
-                line-height: 1.3;
-
-                .korean {
-                    margin-bottom: 1rem;
-                }
-            }
-
-            .mobile {
-                width: 100%;
-                @include centeredY;
-                text-align: center;
-
-                .korean,
-                .english {
-                    width: 100%;
-                    position: absolute;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
-                }
-
-                .korean {
-                    animation: swap 8s infinite linear alternate-reverse;
-                }
-
-                .english {
-                    animation: swap 8s infinite linear alternate;
-                }
-
-                @keyframes swap {
-                    0% {
-                        opacity: 1;
-                    }
-
-                    50% {
-                        opacity: 0;
-                    }
-
-                    100% {
-                        opacity: 0;
-                    }
-                }
-            }
-
-            .rest {
-                display: none;
-                position: absolute;
-                top: 2rem;
-                left: 2rem;
-            }
-
-            @media (min-width: $tablet) {
-                & {
-                    .mobile {
-                        display: none;
-                    }
-
-                    .rest {
-                        display: block;
-                    }
-                }
-            }
-        }
-
-    }
-
     .contents {
         position: relative;
 
