--- a/src/sass/pages/_root.scss
+++ b/src/sass/pages/_root.scss
@@ -16,7 +16,7 @@
         .box {
             @include centered();
             // transform: translate(-50%, -58%);
-            width: fit-content;
+            width: 100%;
             padding: 0 10px;
             text-align: center;
             line-height: 1.5;
