--- a/src/pug/_layout-admin.pug
+++ b/src/pug/_layout-admin.pug
@@ -3,14 +3,46 @@ html(lang="ko")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0, shrink-to-fit=no")
-    meta(name="title", content="Koinvestor Blog")
-    meta(name="description", content="Koinvestor Blog")
-    meta(name="keywords", content="koinvestor, blog, blockchain, korea investor, korea, investor")
-    meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="format-detection", content="telephone=no, address=no, email=no")
-    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    meta(name="format-detaction", content="telephone=no, address=no, email=no")
+    meta(name="referrer" content="strict-origin")
 
-    title KOINVESTOR Blog
+    meta(name="title", content="Koinvestor Blog - Official information to the Asian investors")
+    meta(name="description", content="Koinvestor promptly and accurately delivers the official information of the global blockchain projects, through mutual cooperation, to the Asian investors.")
+    meta(name="keywords", content="koinvestor, blockchain, korea investor, korea, investor, vc, venture capital")
+
+    meta(property="og:title" content="Koinvestor Blog - Official information to the Asian investors")
+    meta(property="og:url" content="https://blog.koinvestor.com")
+    meta(property="og:description" content="Koinvestor promptly and accurately delivers the official information of the global blockchain projects, through mutual cooperation, to the Asian investors.")
+    meta(property="og:image" content="/assets/icon/chrome-touch-icon-512x512.png")
+    meta(property="og:type" content="website")
+    
+    meta(name="apple-mobile-web-app-capable", content="yes")
+    meta(name="apple-mobile-web-app-status-bar-style" content="#ffffff")
+
+    meta(name="mobile-web-app-capable" content="yes")
+    
+    link(rel="shortcut icon" href="/assets/favicons/favicon.ico")
+    link(rel="apple-touch-icon" sizes="57x57" href="/assets/favicons/apple-icon-57x57.png")
+    link(rel="apple-touch-icon" sizes="60x60" href="/assets/favicons/apple-icon-60x60.png")
+    link(rel="apple-touch-icon" sizes="72x72" href="/assets/favicons/apple-icon-72x72.png")
+    link(rel="apple-touch-icon" sizes="76x76" href="/assets/favicons/apple-icon-76x76.png")
+    link(rel="apple-touch-icon" sizes="114x114" href="/assets/favicons/apple-icon-114x114.png")
+    link(rel="apple-touch-icon" sizes="120x120" href="/assets/favicons/apple-icon-120x120.png")
+    link(rel="apple-touch-icon" sizes="144x144" href="/assets/favicons/apple-icon-144x144.png")
+    link(rel="apple-touch-icon" sizes="152x152" href="/assets/favicons/apple-icon-152x152.png")
+    link(rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-icon-180x180.png")
+    link(rel="icon" type="image/png" sizes="192x192"  href="/assets/favicons/android-icon-192x192.png")
+    link(rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png")
+    link(rel="icon" type="image/png" sizes="96x96" href="/assets/favicons/favicon-96x96.png")
+    link(rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png")
+    meta(name="msapplication-TileColor" content="#ffffff")
+    meta(name="msapplication-TileImage" content="/assets/favicons/ms-icon-144x144.png")
+
+    link(rel="manifest", href="/manifest.json")
+    meta(name="theme-color" content="#ffffff")
+
+    title Koinvestor Blog
     link(rel="stylesheet", href=`/css/main.css`)
 
     script(src="https://polyfill.io/v3/polyfill.min.js?flags=gated" async defer)
