a link color and text-decoration modify

--- a/src/pug/pages/detail.pug
+++ b/src/pug/pages/detail.pug
@@ -23,6 +23,8 @@ block main
                 | 우리는 앰브로서스에서 미래를 다시 만들고, 과거에는 상상도 하지 못했던 새로운 기회들을 제공하기를 갈망하고 있습니다. 우리가 꿈꾸는 깨끗하고, 효율적이며, 투명한 세계는 우리의 핵심 기술과 함께 시작되며, 변화 가능한 수천개의 사용사례로 확장됩니다.
 
                 img(src="http://rigvedawiki.net/w/%EC%95%84%EC%9D%B4%EC%9C%A0?action=download&value=thumbnails/IU.w480.jpg" style="width:480px; height:720px;")
+                p
+                    a(href="https://www.koinvestor.com" target="_blank") Koinvestor
                 img(src="https://www.striderite.com/on/demandware.static/-/Sites-striderite_us-Library/default/dw691672b8/content/seasonal-content/2018/07/striderite-wide-widths-shoes-for-boys-CH-20180724.jpg" style="width:920px; height:245px;")
                 img(src="http://rigvedawiki.net/w/%EC%95%84%EC%9D%B4%EC%9C%A0?action=download&value=thumbnails/IU.w480.jpg")
                 img(src="https://www.striderite.com/on/demandware.static/-/Sites-striderite_us-Library/default/dw691672b8/content/seasonal-content/2018/07/striderite-wide-widths-shoes-for-boys-CH-20180724.jpg")
