--- a/src/sass/pages/_detail.scss
+++ b/src/sass/pages/_detail.scss
@@ -168,6 +168,8 @@
             a {
                 overflow: hidden;
                 word-break: break-all;
+                // color: rgb(120, 155, 221);
+                text-decoration: underline !important;
             }
 
             em {
