detail image max-height hide

--- a/src/sass/pages/_detail.scss
+++ b/src/sass/pages/_detail.scss
@@ -96,7 +96,7 @@
                     // width: auto !important;
                     height: auto !important;
                     max-width: 100% !important;
-                    max-height: 500px !important;
+                    // max-height: 500px !important;
                     vertical-align: top;
                     margin-bottom: 12px;
                     object-fit: contain;
