grid component`s class summary height modify

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,7 +14,7 @@ block main
           | 아시아 투자자들에게 유용한 정보를  <br />
           | 신속하고 정확하게 제공합니다.
         .english
-          | Koinvestor <br />
+          | Koinvestor blog<br />
           | promptly and accurately delivers  <br />
           | the official information <br />
           | of the global blockchain projects, <br />
@@ -25,7 +25,7 @@ block main
           | 코인베스터 블로그는 전 세계 블록체인 프로젝트팀과 협업을 통하여 <br/>
           | 아시아 투자자들에게 유용한 정보를 신속하고 정확하게 제공합니다.
         .english
-          | Koinvestor promptly and accurately delivers the official information <br />
+          | Koinvestor blog promptly and accurately delivers the official information <br />
           | of the global blockchain projects, through mutual cooperation, <br />
           | to the Asian investors.
 
