--- a/src/sass/components/_grid.scss
+++ b/src/sass/components/_grid.scss
@@ -228,7 +228,7 @@
                 color: rgba(0, 0, 0, .54);
                 font-size: .93rem;
                 line-height: 1.4;
-                height: 5.5em;
+                max-height: 5.5em;
             }
 
             .who {
