footer e-mail mailto workgin

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -15,6 +15,10 @@ footer {
         .email {
             width: 100%;
             text-align: center;
+
+            a {
+                color: inherit;
+            }
         }
 
         @media (min-width: $tablet) {
