--- a/src/pug/layout/footer.pug
+++ b/src/pug/layout/footer.pug
@@ -1,7 +1,8 @@
 footer
     .wrap
         .copyright ⓒ 2019 BLOG.KOINVESTOR
-        .email contact@koinvestor.com
+        .email 
+            a(href="mailto:contact@koinvestor.com") contact@koinvestor.com
         .provision
             | 이용약관 |
             | 코인베스터 블로그 (“회사”)가 게시하는<br class="sm"/> 글, 사진, 각종 파일과
