admin project management input radio style issue solve

--- a/src/sass/admin/contents/management/_input.scss
+++ b/src/sass/admin/contents/management/_input.scss
@@ -151,6 +151,10 @@
 
             label {
                 cursor: pointer;
+
+                input[type="radio"] {
+                    appearance: radio;
+                }
             }
 
             label:nth-child(2) {
