Resource accordion complete

--- a/src/pug/pages/project.pug
+++ b/src/pug/pages/project.pug
@@ -9,10 +9,11 @@ block main
                 span.en TON
             div 분산형 클라우드 게이밍 플랫폼
         article.contents.in--section--project
+            include ../components/resource
             .projects
-                include ../components/menu
-                .empty
-                    .stick
-                    .comment COMING SOON..
+                //- include ../components/menu
+                //- .empty
+                //-     .stick
+                //-     .comment COMING SOON..
                 include ../components/grid
                 include ../components/loading
