--- a/src/sass/components/_resource.scss
+++ b/src/sass/components/_resource.scss
@@ -1,17 +1,18 @@
 article.resource {
-    margin-bottom: 1rem;
-    max-height: 20px;
+    margin-bottom: 1.5rem;
+    max-height: 25px;
     overflow: hidden;
+    cursor: pointer;
     transition: 0.5s;
 
     &.active {
-        max-height: 1000px;
+        max-height: 500px;
     }
 
     hgroup.trigger {
         display: flex;
         align-items: center;
-        cursor: pointer;
+        height: 25px;
 
         h3.title {
             color: rgba(0, 0, 0, 0.66);
@@ -55,7 +56,7 @@ article.resource {
         flex-wrap: wrap;
 
         @media (min-width: 1024px) {
-            padding: 1rem 0;
+            padding: 1rem 0 1.25rem;
             border-bottom: 1px solid rgba(0, 0, 0, 0.3);
         }
 
@@ -65,6 +66,10 @@ article.resource {
             width: 100%;
             padding: 1rem 0;
             border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+
+            &:last-child {
+                padding: 1rem 0 1.25rem;
+            }
 
             @media (min-width: 1024px) {
                 width: 33.333333%;
@@ -76,6 +81,9 @@ article.resource {
                 &:nth-child(6),
                 &:nth-child(9) {
                     border: 0;
+                }
+                &:last-child {
+                    padding: 0.4rem 0;
                 }
             }
 
