--- a/src/sass/components/_resource.scss
+++ b/src/sass/components/_resource.scss
@@ -42,7 +42,7 @@ article.resource {
             border: 1px solid rgba(0, 0, 0, 0.5);
             border-radius: 50%;
             margin: 0 0.5rem;
-            transition: 0.4s;
+            // transition: 0.4s;
 
             &::after,
             &::before {
@@ -55,6 +55,7 @@ article.resource {
 
             &::before {
                 transform: translate(-50%, -50%) rotate(90deg);
+                transition: 0.4s;
             }
         }
 
