telegram resource add

--- a/src/pug/components/resource.pug
+++ b/src/pug/components/resource.pug
@@ -19,5 +19,10 @@ article.resource.active
                 figure
                     img(src="https://icongr.am/feather/download.svg?size=20&color=000000", alt="")
                     figcaption 电报 第一阶段, 入门书
+        li
+            a(href="" target="_blank")
+                figure
+                    img(src="https://icongr.am/feather/download.svg?size=20&color=000000", alt="")
+                    figcaption 电报开放网络(TON) 白皮书
 
         
